codemp/julia/generated/game/bg_saberLoad.jl

WP_IsSaberTwoHanded( saberName_ ) = ccall((:WP_IsSaberTwoHanded, lib), qboolean, ( Ptr{Char},  ), saberName_ );
WP_SaberGetHiltInfo( singleHilts_, staffHilts_ ) = ccall((:WP_SaberGetHiltInfo, lib), Void, ( Ptr{Char}, Ptr{Char},  ), singleHilts_, staffHilts_ );
BG_BLADE_ActivateTrail( blade_, duration_ ) = ccall((:BG_BLADE_ActivateTrail, lib), Void, ( Ptr{bladeInfo_t}, Float32,  ), blade_, duration_ );
BG_BLADE_DeactivateTrail( blade_, duration_ ) = ccall((:BG_BLADE_DeactivateTrail, lib), Void, ( Ptr{bladeInfo_t}, Float32,  ), blade_, duration_ );
BG_SI_Activate( saber_ ) = ccall((:BG_SI_Activate, lib), Void, ( Ptr{saberInfo_t},  ), saber_ );
BG_SI_Deactivate( saber_ ) = ccall((:BG_SI_Deactivate, lib), Void, ( Ptr{saberInfo_t},  ), saber_ );
BG_SI_BladeActivate( saber_, iBlade_, bActive_ ) = ccall((:BG_SI_BladeActivate, lib), Void, ( Ptr{saberInfo_t}, Int32, qboolean,  ), saber_, iBlade_, bActive_ );
BG_SI_Active( saber_ ) = ccall((:BG_SI_Active, lib), qboolean, ( Ptr{saberInfo_t},  ), saber_ );
BG_SI_SetLength( saber_, length_ ) = ccall((:BG_SI_SetLength, lib), Void, ( Ptr{saberInfo_t}, Float32,  ), saber_, length_ );
BG_SI_SetDesiredLength( saber_, len_, bladeNum_ ) = ccall((:BG_SI_SetDesiredLength, lib), Void, ( Ptr{saberInfo_t}, Float32, Int32,  ), saber_, len_, bladeNum_ );
BG_SI_SetLengthGradual( saber_, time_ ) = ccall((:BG_SI_SetLengthGradual, lib), Void, ( Ptr{saberInfo_t}, Int32,  ), saber_, time_ );
BG_SI_Length( saber_ ) = ccall((:BG_SI_Length, lib), Float32, ( Ptr{saberInfo_t},  ), saber_ );
BG_SI_LengthMax( saber_ ) = ccall((:BG_SI_LengthMax, lib), Float32, ( Ptr{saberInfo_t},  ), saber_ );
BG_SI_ActivateTrail( saber_, duration_ ) = ccall((:BG_SI_ActivateTrail, lib), Void, ( Ptr{saberInfo_t}, Float32,  ), saber_, duration_ );
BG_SI_DeactivateTrail( saber_, duration_ ) = ccall((:BG_SI_DeactivateTrail, lib), Void, ( Ptr{saberInfo_t}, Float32,  ), saber_, duration_ );
